[tool.poetry]
name = "meshtastic-tools"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"

[tool.poetry.scripts]
"layer-configs" = "meshtastic_tools.layer_configs:main"

[tool.poetry.dependencies]
python = "~3.12"
meshtastic = "^2.3.8"
pydantic = "^2.7.1"
loguru = "^0.7.2"
click = "^8.1.7"
esptool = "^4.7.0"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.4"
pytest = "^8.2.0"
types-pyyaml = "^6.0.12.20240311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
